basic syscall functions via software interrupts

--- a/IosCore/Makefile
+++ b/IosCore/Makefile
@@ -6,7 +6,7 @@ DATA 		= data
 INCLUDES	= include
 
 ASFLAGS += -D_LANGUAGE_ASSEMBLY
-CFLAGS += -DCAN_HAZ_IRQ -DCAN_HAZ_IPC -DCAN_HAZ_USBGECKO
+CFLAGS += -DCAN_HAZ_IRQ -DCAN_HAZ_IPC -DCAN_HAZ_USBGECKO -fpie
 LIBS = -lgcc
 LDSCRIPT = 
 TARGET = libIosCore.a
