--- a/modules/es/Makefile
+++ b/modules/es/Makefile
@@ -1,36 +1,154 @@
+#---------------------------------------------------------------------------------
+.SUFFIXES:
+#---------------------------------------------------------------------------------
+ifeq ($(SDKDIR),)
 SDKDIR = ../../sdk
-include $(SDKDIR)/starlet.mk
-## you should not be messing with anything above this point ! ##
+endif
 
-ENTRYPOINT	= 0x13400000
-SOURCES		= source
-DATA 		= data 
-INCLUDES	= include
-LIBS 		= -lcore -lgcc 
-OUTPUT		= $(notdir $(CURDIR))
-TARGET 		= $(OUTPUT)-syms.elf
-TARGET_ELF	= $(OUTPUT).elf
-TARGET_BIN	= $(OUTPUT).bin
-CFLAGS 		+= -DCAN_HAZ_USBGECKO
-
-## you should not be messing with anything below this point ! ##
 include $(SDKDIR)/module.mk
 
-all: $(TARGET) $(TARGET_ELF) $(TARGET_BIN)
+#---------------------------------------------------------------------------------
+# TARGET is the name of the output
+# BUILD is the directory where object files & intermediate files will be placed
+# SOURCES is a list of directories containing source code
+# INCLUDES is a list of directories containing extra header files
+# DATA is a list of directories containing binary data
+#
+# All directories are specified relative to the project directory where
+# the makefile is found
+#
+#---------------------------------------------------------------------------------
+TARGET			:= $(notdir $(CURDIR))
+BUILD			:= build
+SOURCES			+= source
+INCLUDES		:= include
+DATA			:=
+ENTRYPOINT		:= 0x13400000
+#---------------------------------------------------------------------------------
+# options for code generation
+#---------------------------------------------------------------------------------
 
-$(TARGET_ELF): $(TARGET)
-	@echo "  STRIP     $@"
-	@$(STRIP) $< -o $@
-	
-$(TARGET_BIN): $(TARGET)
-	@echo "  LINK      $@"
-	@$(OBJCOPY) -O binary $< $@
-	
-clean: myclean
+CFLAGS 	+= -DCAN_HAZ_USBGECKO
+CFLAGS	+=	$(INCLUDE)
+ASFLAGS += $(CFLAGS) -D_LANGUAGE_ASSEMBLY
 
-myclean:
-	@echo $(OBJS)
-	@echo $(SOURCES)
-	@echo $(foreach dir,$(SOURCES),$(notdir $(wildcard $(dir)/*.c)))
-	@rm -f $(TARGET_BIN)
-	@rm -f $(TARGET_ELF)
+ifeq ($(NOMAPFILE),)
+LDFLAGS += -Wl,-Map,$(notdir $@).map
+endif
+
+ifneq ($(LDSCRIPT),)
+LDFLAGS += -Wl,-T$(LDSCRIPT)
+endif
+
+#---------------------------------------------------------------------------------
+# any extra libraries we wish to link with the project
+#---------------------------------------------------------------------------------
+LIBS	:= -lcore -lgcc 
+
+#---------------------------------------------------------------------------------
+# list of directories containing libraries, this must be the top level containing
+# include and lib
+#---------------------------------------------------------------------------------
+LIBDIRS	:=	../../../$(COREDIR)
+
+#---------------------------------------------------------------------------------
+# no real need to edit anything past this point unless you need to add additional
+# rules for different file extensions
+#---------------------------------------------------------------------------------
+
+ifneq ($(BUILD),$(notdir $(CURDIR)))
+#---------------------------------------------------------------------------------
+
+export OUTPUT			:=	$(CURDIR)/$(TARGET)-sym
+export OUTPUT_STRIPPED	:=	$(CURDIR)/$(TARGET)
+export OUTPUT_BIN		:=	$(CURDIR)/$(TARGET)
+export MODULE_NAME		:= 	$(TARGET)
+export VPATH			:=	$(foreach dir,$(SOURCES),$(CURDIR)/$(dir)) \
+							$(foreach dir,$(DATA),$(CURDIR)/$(dir))
+
+export DEPSDIR	:=	$(CURDIR)/$(BUILD)
+
+CFILES		:=	$(foreach dir,$(SOURCES),$(notdir $(wildcard $(dir)/*.c)))
+CPPFILES	:=	$(foreach dir,$(SOURCES),$(notdir $(wildcard $(dir)/*.cpp)))
+sFILES		:=	$(foreach dir,$(SOURCES),$(notdir $(wildcard $(dir)/*.s)))
+SFILES		:=	$(foreach dir,$(SOURCES),$(notdir $(wildcard $(dir)/*.S)))
+BINFILES	:=	$(foreach dir,$(DATA),$(notdir $(wildcard $(dir)/*.*)))
+
+#---------------------------------------------------------------------------------
+# use CXX for linking C++ projects, CC for standard C
+#---------------------------------------------------------------------------------
+ifeq ($(strip $(CPPFILES)),)
+#---------------------------------------------------------------------------------
+	export LD	:=	$(CC)
+#---------------------------------------------------------------------------------
+else
+#---------------------------------------------------------------------------------
+	export LD	:=	$(CXX)
+#---------------------------------------------------------------------------------
+endif
+#---------------------------------------------------------------------------------
+
+export OFILES_BIN := $(addsuffix .o,$(BINFILES))
+
+export OFILES_SOURCES := $(CPPFILES:.cpp=.o) $(CFILES:.c=.o) $(sFILES:.s=.o) $(SFILES:.S=.o)
+
+export OFILES := $(OFILES_BIN) $(OFILES_SOURCES)
+
+export HFILES := $(addsuffix .h,$(subst .,_,$(BINFILES)))
+
+export INCLUDE	:=	$(foreach dir,$(INCLUDES),-iquote $(CURDIR)/$(dir)) \
+					$(foreach dir,$(LIBDIRS),-I$(dir)/include) \
+					-I$(CURDIR)/$(BUILD)
+
+export LIBPATHS	:=	$(foreach dir,$(LIBDIRS),-L$(dir)/lib)
+
+.PHONY: $(BUILD) clean
+
+#---------------------------------------------------------------------------------
+	
+$(BUILD):
+	@[ -d $@ ] || mkdir -p $@
+	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile SDKDIR=../$(SDKDIR)
+
+#---------------------------------------------------------------------------------
+clean:
+	$(SILENTMSG) clean ...
+	$(SILENTCMD)rm -fr $(BUILD) $(OUTPUT).elf $(OUTPUT_STRIPPED).elf $(OUTPUT_BIN).bin
+
+#---------------------------------------------------------------------------------
+else
+
+#---------------------------------------------------------------------------------
+# main targets
+#---------------------------------------------------------------------------------
+
+$(OUTPUT_BIN).bin: $(OUTPUT_STRIPPED).elf
+	$(SILENTMSG) "  LINK      $@"
+	$(SILENTCMD)$(OBJCOPY) -O binary $< $@
+
+$(OUTPUT_STRIPPED).elf: $(OUTPUT).elf
+	$(SILENTMSG)  "  STRIP      $@"
+	$(SILENTCMD)$(STRIP) $< -o $@	
+	
+$(OUTPUT).elf	:	$(OFILES)
+
+$(OFILES_SOURCES) : $(HFILES)
+
+#---------------------------------------------------------------------------------
+# The bin2o rule should be copied and modified
+# for each extension used in the data directories
+#---------------------------------------------------------------------------------
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .bin extension
+#---------------------------------------------------------------------------------
+%.bin.o	%_bin.h :	%.bin
+#---------------------------------------------------------------------------------
+	@echo $(notdir $<)
+	@$(bin2o)
+
+
+-include $(DEPSDIR)/*.d
+#---------------------------------------------------------------------------------------
+endif
+#---------------------------------------------------------------------------------------
