--- a/modules/template/Makefile
+++ b/modules/template/Makefile
@@ -30,7 +30,7 @@ ENTRYPOINT		:= 0x13400000
 
 CFLAGS 	+= -DCAN_HAZ_USBGECKO
 CFLAGS	+=	$(INCLUDE)
-ASFLAGS += $(CFLAGS) -D_LANGUAGE_ASSEMBLY
+ASFLAGS += $(CFLAGS)
 
 ifeq ($(NOMAPFILE),)
 LDFLAGS += -Wl,-Map,$(notdir $@).map
