add python to CI build

--- a/.github/workflows/StarStruck-CI.yml
+++ b/.github/workflows/StarStruck-CI.yml
@@ -16,6 +16,10 @@ jobs:
       options: --cpus 2
 
     steps:
+      - name: Set up Python 3
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3
       - name: Checkout
         uses: actions/checkout@v1
 
