--- a/.github/workflows/StarStruck-CI.yml
+++ b/.github/workflows/StarStruck-CI.yml
@@ -16,12 +16,9 @@ jobs:
       options: --cpus 2
 
     steps:
-      - name: Set up Python 2
-        uses: actions/setup-python@v4
-        with:
-          python-version: 2.7.18
       - name: Checkout
         uses: actions/checkout@v1
+      - uses: actions/setup-python@v4
 
       - name: Build
         run: |
