--- a/.github/workflows/StarStruck-CI.yml
+++ b/.github/workflows/StarStruck-CI.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
       - uses: actions/setup-python@v4
+        with: 
+          python-version: 3.11.1
 
       - name: Build
         run: |
