--- a/.github/workflows/StarStruck-CI.yml
+++ b/.github/workflows/StarStruck-CI.yml
@@ -18,10 +18,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - uses: actions/setup-python@v4
+        
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with: 
-          python-version: 3.11.1
+          python-version: 3.9
 
+      - name: Test
+        run: |
+          apt-cache policy libc
       - name: Build
         run: |
           make
