--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
       "kernel" : true,
       "core" : true,
       "elfloader" : true,
+	  "modules" : true,
       "tools" : true,
       "sdk" : true
 	},
